Gm4cArtefatos/kubernetes/yaml/cassandra.yaml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "cassandra"
  namespace: acad
spec:
  selector:
    matchLabels: 
      name: "cassandra"
  template: 
    metadata:
      labels:
        name: "cassandra"
    spec:
      containers:
        - name: "cassandra"
          image: "cassandra:latest"
          securityContext:
            privileged: true
          ports:
            - containerPort: 7000 
              name: "porta1"
            - containerPort: 9042
              name: "dbport"
  replicas: 1
