Gm4cArtefatos/kubernetes/yaml/grafana.yaml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "grafana"
  namespace: acad
spec:
  selector:
    matchLabels: 
      name: "grafana"
  template: 
    metadata:
      labels:
        name: "grafana"
    spec:
      containers:
        - name: "grafana"
          image: "grafana/grafana:latest"
          securityContext:
            privileged: true
          ports:
            - containerPort: 3000 
              name: "porta1"         
  replicas: 1
