Gm4cArtefatos/kubernetes/yaml/conta-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: conta-svc
  namespace: acad
  labels:
    app: gm4c-conta
spec:
  ports:
  - port: 9002
    name: porta1
    protocol: TCP
    targetPort: 9002
  selector:
    app: gm4c-conta
