Gm4cArtefatos/kubernetes/yaml/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  labels:
    app: grafana
spec:
  type: NodePort
  ports:
  - port: 3000
    name: porta1
    protocol: TCP
    targetPort: 3000
    nodePort: 31300
  selector:
    name: grafana
