Gm4cArtefatos/kubernetes/yaml/jaeger-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-ext-svc
  labels:
    app: jaeger
spec:
  type: NodePort
  ports:
  - port: 16686
    name: porta5
    protocol: TCP
    targetPort: 16686
    nodePort: 31686
  selector:
    name: jaeger
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger-svc
  labels:
    app: jaeger
spec:
  ports:
  - port: 5775 
    name: porta1
    protocol: UDP
    targetPort: 5775
  - port: 6831
    name: porta2
    protocol: UDP
    targetPort: 6831
  - port: 6832
    name: porta3
    protocol: UDP
    targetPort: 6832
  - port: 5778
    name: porta4
    protocol: TCP
    targetPort: 5778
  - port: 16686
    name: porta5
    protocol: TCP
    targetPort: 16686
  - port: 14268
    name: porta6
    protocol: TCP
    targetPort: 14268
  - port: 9411
    name: porta7
    protocol: TCP
    targetPort: 9411
  selector:
    name: jaeger
