Gm4cArtefatos/kubernetes/yaml/kafka-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ext-svc
  labels:
    name: kafka
    namespace: acad
spec:
  type: NodePort
  ports:
  - port: 3030
    name: porta2
    protocol: TCP
    nodePort: 31030
    targetPort: 3030
  - port: 7071
    name: jmx
    protocol: TCP
    nodePort: 31071
    targetPort: 7071
  - port: 9092
    name: kafka-client
    protocol: TCP
    nodePort: 31092
    targetPort: 9092
  selector:
    name: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-svc
  namespace: acad
  labels:
    name: kafka
spec:
  ports:
  - port: 9092
    name: porta1
    protocol: TCP
    targetPort: 9092
  - port: 3030
    name: porta2
    protocol: TCP
    targetPort: 3030
  - port: 2181
    name: porta3
    protocol: TCP
    targetPort: 2181
  - port: 8081
    name: porta4
    protocol: TCP
    targetPort: 8081
  - port: 8082
    name: porta5
    protocol: TCP
    targetPort: 8082
  - port: 8083
    name: porta6
    protocol: TCP
    targetPort: 8083
  selector:
    name: kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-exporter-svc
  namespace: acad
  labels:
    name: kafka-exporter
spec:
  type: NodePort
  ports:
  - port: 9308
    name: porta1
    protocol: TCP
    nodePort: 31308
    targetPort: 9308
  selector:
    name: kafka-exporter
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-lag-exporter-svc
  namespace: acad
  labels:
    name: kafka-lag-exporter
spec:
  type: NodePort
  ports:
  - port: 8000
    name: porta1
    protocol: TCP
    nodePort: 31800
    targetPort: 8000
  selector:
    name: kafka-lag-exporter
