Gm4cArtefatos/kubernetes/yaml/ldap.yaml
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "ldap"
spec:
  selector:
    matchLabels: 
      name: "ldap"
  template: 
    metadata:
      labels:
        name: "ldap"      
    spec:
      containers:
        - name: "openldap"
          image: "osixia/openldap:1.3.0"
          ports:
            - containerPort: 389
              name: "ldap"
              protocol: TCP
#          volumeMounts:
#         - name: ldap-db
#            mountPath: /var/lib/ldap        
#          - name: ldap-conf
#            mountPath: /etc/ldap
#        - name: ldap-ui
#          image: osixia/phpldapadmin:0.9.0
#          volumeMounts:
#            - name: phpldapadmin-certs
#              mountPath: /container/service/phpldapadmin/assets/apache2/certs
#            - name: ldap-client-certs
#              mountPath: /container/service/ldap-client/assets/certs
#          ports:
#            - containerPort: 443
#          env:
#            - name: PHPLDAPADMIN_LDAP_HOSTS
#              value: "#PYTHON2BASH:[{'ldap-svc:389': [{'server': [{'tls': False}]},{'login': [{'bind_id': 'cn=admin,dc=gm4c,dc=com'}]}]}]"
#            - name: PHPLDAPADMIN_SERVER_ADMIN
#              value: "richard@gm4c.com"
#            - name: PHPLDAPADMIN_SERVER_PATH
#              value: "/phpldapadmin"
#            - name: PHPLDAPADMIN_HTTPS
#              value: "false"
#            - name: PHPLDAPADMIN_HTTPS_CRT_FILENAME
#              value: "cert.crt"
#            - name: PHPLDAPADMIN_HTTPS_KEY_FILENAME
#              value: "cert.key"
#            - name: PHPLDAPADMIN_HTTPS_CA_CRT_FILENAME
#              value: "ca.crt"
#            - name: PHPLDAPADMIN_LDAP_CLIENT_TLS
#              value: "false"
#            - name: PHPLDAPADMIN_LDAP_CLIENT_TLS_REQCERT
#              value: "demand"
#            - name: PHPLDAPADMIN_LDAP_CLIENT_TLS_CRT_FILENAME
#              value: "cert.crt"
#            - name: PHPLDAPADMIN_LDAP_CLIENT_TLS_KEY_FILENAME
#              value: "cert.key"
#            - name: PHPLDAPADMIN_LDAP_CLIENT_TLS_CA_CRT_FILENAME
#              value: "ca.crt"
#      volumes:
#      - name: ldap-db
#        hostPath:
#           path: /root/volumes/ldap/database
#      - name: ldap-conf
#        hostPath:
#           path: /root/volumes/ldap/config 
  replicas: 1 
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-ext-svc
  labels:
    name: ldap-ext-svc
spec:
  type: NodePort
  ports:
#  - port:  443
#    name: web-ui
#    protocol: TCP
#    targetPort: 443
#    nodePort: 31500
  - port: 389
    name: ldap
    protocol: TCP
    targetPort: 389
    nodePort: 31389
  selector:
    name: ldap
---
apiVersion: v1
kind: Service
metadata:
  name: ldap-svc
  labels:
    name: ldap-svc
spec:
  ports:
  - port: 389
    name: ldap
    protocol: TCP
    targetPort: 389
  selector:
    name: ldap
